test/expected/explain_ast9i.out
explain int a[static 9]
             ^
14: error: "static" arrays are illegal outside of parameters
